--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,3 +8,4 @@ spring.datasource.username=postgres
 spring.datasource.password=admin123
 spring.jpa.open-in-view=false
 spring.jpa.hibernate.ddl-auto=create
+spring.jpa.show-sql=true
